loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:3: error: not found: value finsihed
while (finsihed!= true) {
       ^