loopfor.LoopStairs.scala.code
var finished : Boolean = false
forward(3)
while (finsihed!= true) {
  if (isFacingWall()){
    left()
    forward()
    right()
    forward()
  }
  else {
    forward(3)
    finished=true
  }
}